Replace OkHttp Request with SearcherRequest